feat(admin): get all credit card auth reqs
